Item2979: fixes printing problems with pre texts on IE and Firefox
git-svn-id: http://develop.twiki.org/svn/twiki/branches/MAIN@11920 a00a5322-12db-0310-a70b-8735589c885e

--- a/twikiplugins/PatternSkin/pub/TWiki/PatternSkin/print.css
+++ b/twikiplugins/PatternSkin/pub/TWiki/PatternSkin/print.css
@@ -98,8 +98,24 @@
 		background-color:transparent;
 	}
 	/* make sure that overflowing content is visible */
-	html>body pre { /* hide from IE */
-		/*\*/ overflow:visible !important; /* */ overflow:visible; width:auto; /* for Mac Safari */
+	pre,
+	html>body pre {
+		overflow:visible;
+	}
+	/*Some rules about Page breaks */
+	h1, h2, h3, h4, h5, h6 {
+		page-break-after:avoid;
+		page-break-inside:avoid;
+	}
+	img {
+		page-break-inside:avoid;
+		page-break-after:avoid;
+	}
+	blockquote, table, pre {
+		page-break-inside:avoid;
+	}
+	ul, ol, dl {
+		page-break-before:avoid;
 	}
 	pre, code, tt {
 		color:#5b4221;
